tests/diag/provider-over-local.err
tests/diag/provider-over-local.id:2:1: error: surface '<+>' from 'tests/diag/provider-over-local.id' is already active in this context; activating 'tests/pkg/exporter' would conflict
  while activating 'tests/pkg/exporter' (tests/diag/provider-over-local.id:2:1)
