tests/diag/provider-over-local.id
operator <+> precedence: 50 assoc: left fixity: infix -> sub
implement tests/pkg/exporter
3 <+> 4
